# telegram-todo-bot

./: Cargo.toml  Dockerfile  database.sql  database.sqlite3
migrations/2023-01-02-194115_create_todos/: up.sql
migrations/2023-01-07-175032_create_last_list_message/: down.sql  up.sql
src/: bot.rs  command.rs  constants.rs  database.rs  main.rs  models.rs  schema.rs  tg_user_command.rs  todo_item.rs  utils.rs
src/bot/: callback_handlers.rs  commands.rs  common_handlers.rs  keyboard.rs
src/database/: manager.rs  models.rs  repository.rs  schema.rs
src/presenting/: todo_item.rs
src/utils/: number_parser.rs
